--- a/WebApi/Dockerfile
+++ b/WebApi/Dockerfile
@@ -6,6 +6,8 @@ EXPOSE 80
 EXPOSE 443
 
 FROM mcr.microsoft.com/dotnet/sdk:7.0 AS build
+ARG HTTPS_CERTIFICATE_PASSWORD
+
 WORKDIR /src
 COPY ["WebApi/WebApi.csproj", "WebApi/"]
 RUN dotnet restore "WebApi/WebApi.csproj"
