--- a/WebApi/Dockerfile
+++ b/WebApi/Dockerfile
@@ -1,24 +1,15 @@
-#See https://aka.ms/customizecontainer to learn how to customize your debug container and how Visual Studio uses this Dockerfile to build your images for faster debugging.
-
-FROM mcr.microsoft.com/dotnet/aspnet:7.0 AS base
-WORKDIR /app
-EXPOSE 80
-EXPOSE 443
-
 FROM mcr.microsoft.com/dotnet/sdk:7.0 AS build
-ARG HTTPS_CERTIFICATE_PASSWORD
 
-WORKDIR /src
-COPY ["WebApi/WebApi.csproj", "WebApi/"]
-RUN dotnet restore "WebApi/WebApi.csproj"
+WORKDIR /source
+
+COPY *.csproj .
+RUN dotnet restore
+
 COPY . .
-WORKDIR "/src/WebApi"
-RUN dotnet build "WebApi.csproj" -c Release -o /app/build
+RUN dotnet publish --self-contained false -o /app
 
-FROM build AS publish
-RUN dotnet publish "WebApi.csproj" -c Release -o /app/publish /p:UseAppHost=false
-
-FROM base AS final
+FROM mcr.microsoft.com/dotnet/aspnet:7.0
 WORKDIR /app
-COPY --from=publish /app/publish .
-ENTRYPOINT ["dotnet", "WebApi.dll"]
+RUN mkdir /app/files
+COPY --from=build /app .
+ENTRYPOINT [ "dotnet", "WebApi.dll" ]
