--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,63 +1,52 @@
 version: '3.4'
 
 services:
-  webapi:
-    image: ${DOCKER_REGISTRY-}webapi
-    build:
-      context: .
-      dockerfile: WebApi/Dockerfile
-      args:
-        - HTTPS_CERTIFICATE_PASSWORD
-    networks:
-      - net_pets
-    environment:
-      - ASPNETCORE_ENVIRONMENT=Development
-      - ASPNETCORE_URLS=https://+:443;http://+:80
-      - ASPNETCORE_Kestrel__Certificates__Default__Password=${HTTPS_CERTIFICATE_PASSWORD}
-      - ASPNETCORE_Kestrel__Certificates__Default__Path=/https/aspnetapp.pfx
-    volumes:
-      - ~/.aspnet/https:/https:ro
-
-  zookeeper:
-    image: confluentinc/cp-zookeeper:latest
-    networks:
-      - net_pets
-    environment:
-      ZOOKEEPER_CLIENT_PORT: 2181
-      ZOOKEEPER_TICK_TIME: 2000
-
   kafka:
-    image: confluentinc/cp-kafka:latest
-    networks:
-      - net_pets
-    depends_on:
-      - zookeeper
+    image: docker.io/bitnami/kafka:3.5
     ports:
-      - 9092:9092
-    environment:
-        KAFKA_BROKER_ID: 1
-        KAFKA_ZOOKEEPER_CONNECT: zookeeper:2181
-        KAFKA_ADVERTISED_LISTENERS: PLAINTEXT://kafka:29092,PLAINTEXT_HOST://localhost:9092
-        KAFKA_LISTENER_SECURITY_PROTOCOL_MAP: PLAINTEXT:PLAINTEXT,PLAINTEXT_HOST:PLAINTEXT
-        KAFKA_INTER_BROKER_LISTENER_NAME: PLAINTEXT
-        KAFKA_OFFSETS_TOPIC_REPLICATION_FACTOR: 1
-        KAFKA_MESSAGE_MAX_BYTES: 10000000
+      - "9092:9092"
     volumes:
-      - ./config/server.properties:/etc/kafka/server.properties
-      - ./config/wait-for-it.sh:/wait-for-it.sh
-    command: ["/wait-for-it.sh", "zookeeper:2181", "--", "/etc/confluent/docker/run"]
-
-  consumer:
-    image: ${DOCKER_REGISTRY-}consumer
-    build:
-      context: .
-      dockerfile: Consumer/Dockerfile
+      - "kafka_data:/bitnami"
+    environment:
+      # KRaft settings
+      - KAFKA_CFG_NODE_ID=0
+      - KAFKA_CFG_PROCESS_ROLES=controller,broker
+      - KAFKA_CFG_CONTROLLER_QUORUM_VOTERS=0@kafka:9093
+      # Listeners
+      - KAFKA_CFG_LISTENERS=PLAINTEXT://:9092,CONTROLLER://:9093
+      - KAFKA_CFG_ADVERTISED_LISTENERS=PLAINTEXT://:9092
+      - KAFKA_CFG_LISTENER_SECURITY_PROTOCOL_MAP=CONTROLLER:PLAINTEXT,PLAINTEXT:PLAINTEXT
+      - KAFKA_CFG_CONTROLLER_LISTENER_NAMES=CONTROLLER
+      - KAFKA_CFG_INTER_BROKER_LISTENER_NAME=PLAINTEXT
     networks:
-      - net_pets
+      - cavalinho
+
+  webapi:
+    networks:
+      - cavalinho
     depends_on:
       - kafka
+    build:
+      context: ./WebApi
+      dockerfile: Dockerfile
+    ports:
+      - 5002:80
+
+  consumer:
+    build:
+      context: ./Consumer
+      dockerfile: Dockerfile
+    command: >
+      sh -c "dotnet run"
+    networks:
+      - cavalinho
+
+     
+volumes:
+  kafka_data:
+    driver: local
 
 networks:
-  net_pets:
+  cavalinho:
     driver: bridge
 
