--- a/Consumer/Dockerfile
+++ b/Consumer/Dockerfile
@@ -1,20 +1,18 @@
-#See https://aka.ms/customizecontainer to learn how to customize your debug container and how Visual Studio uses this Dockerfile to build your images for faster debugging.
-
-FROM mcr.microsoft.com/dotnet/runtime:7.0 AS base
-WORKDIR /app
-
 FROM mcr.microsoft.com/dotnet/sdk:7.0 AS build
-WORKDIR /src
-COPY ["Consumer/Consumer.csproj", "Consumer/"]
-RUN dotnet restore "Consumer/Consumer.csproj"
-COPY . .
-WORKDIR "/src/Consumer"
-RUN dotnet build "Consumer.csproj" -c Release -o /app/build
 
-FROM build AS publish
-RUN dotnet publish "Consumer.csproj" -c Release -o /app/publish /p:UseAppHost=false
-
-FROM base AS final
 WORKDIR /app
-COPY --from=publish /app/publish .
-ENTRYPOINT ["dotnet", "Consumer.dll"]
+
+COPY *.csproj .
+RUN dotnet restore
+
+COPY . .
+
+RUN dotnet publish -c Release -o out
+
+FROM mcr.microsoft.com/dotnet/runtime:7.0
+
+WORKDIR /app
+RUN mkdir /app/files
+COPY --from=build /app/out .
+
+ENTRYPOINT [ "dotnet", "Consumer.dll" ]
