add volumes kafka, file limit, ajustes docker

--- a/Consumer/Dockerfile
+++ b/Consumer/Dockerfile
@@ -7,5 +7,6 @@ COPY *.csproj .
 ENV PATH="$PATH:/root/.dotnet/tools"
 
 RUN dotnet restore && dotnet tool install --global dotnet-ef
+RUN mkdir /appcsharp/files
 
 COPY . .
