--- a/WebApi/WebApi.csproj
+++ b/WebApi/WebApi.csproj
@@ -21,4 +21,8 @@
     <Folder Include="files\" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\Producer\Producer.csproj" />
+  </ItemGroup>
+
 </Project>
