--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,11 +9,9 @@ services:
       - "kafka_data:/bitnami"
       - ./config/server.properties:/etc/kafka/server.properties
     environment:
-      # KRaft settings
       - KAFKA_CFG_NODE_ID=0
       - KAFKA_CFG_PROCESS_ROLES=controller,broker
       - KAFKA_CFG_CONTROLLER_QUORUM_VOTERS=0@kafka:9093
-      # Listeners
       - KAFKA_CFG_LISTENERS=PLAINTEXT://:9092,CONTROLLER://:9093
       - KAFKA_CFG_ADVERTISED_LISTENERS=PLAINTEXT://:9092
       - KAFKA_CFG_LISTENER_SECURITY_PROTOCOL_MAP=CONTROLLER:PLAINTEXT,PLAINTEXT:PLAINTEXT
@@ -28,6 +26,7 @@ services:
       - cavalinho
     depends_on:
       - kafka
+      - producer
     build:
       context: ./WebApi
       dockerfile: Dockerfile
@@ -38,11 +37,16 @@ services:
     build:
       context: ./Consumer
       dockerfile: Dockerfile
-    command: >
-      sh -c "dotnet run"
     networks:
       - cavalinho
      
+  producer:
+    build:
+      context: ./Producer
+      dockerfile: Dockerfile
+    networks:
+      - cavalinho
+
 volumes:
   kafka_data:
     driver: local
@@ -50,4 +54,5 @@ volumes:
 networks:
   cavalinho:
     driver: bridge
+
 
