db connection OK!

--- a/src/docker-compose.yml
+++ b/src/docker-compose.yml
@@ -66,12 +66,16 @@ services:
       - cavalinho
     ports:
       - 5432:5432
+    expose:
+      - "5432"
 
   adminer:
     image: adminer
     restart: always
     ports:
       - 8080:8080
+    networks:
+      - cavalinho
 
 volumes:
   kafka_data:
