first step hidding account menu while logged

--- a/src/docker-compose.yml
+++ b/src/docker-compose.yml
@@ -76,6 +76,8 @@ services:
     restart: always
 
   webapp:
+     env_file:
+        - ../.env
      build:
        context: ./
        dockerfile: WebApp.Dockerfile
