--- a/src/.envexample
+++ b/src/.envexample
@@ -1,3 +1,7 @@
-POSTGRES_DB=
-POSTGRES_USER=
-POSTGRES_PASSWORD=
+POSTGRES_PASSWORD:
+POSTGRES_USER:
+POSTGRES_DB:
+JWT_VALID_AUDIENCE:
+JWT_VALID_ISSUER:
+JWT_SECRET:
+JWT_EXPIRE_TIME:
